<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="channel_description">Download Complete</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_radio_text">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp_radio_text">LoadApp - Current reposoitory by Udacity</string>
    <string name="retrofit_radio_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="button_text">OK</string>
    <string name="glide_url">https://github.com/bumptech/glide</string>
    <string name="loadapp_url">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter</string>
    <string name="retrofit_url">https://github.com/square/retrofit</string>
    <string name="filename_label">File name:</string>
    <string name="status_label">Status:</string>
    <string name="file_missing">Please select a file to download</string>
    <string name="channelID">channelId</string>
    <string name="channelName">Loading</string>
    <string name="status">Success</string>

</resources>
